--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -29,7 +32,7 @@ jobs:
           override: true
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm ci
 
       - name: Clone Ewwii repo
         run: git clone https://github.com/Ewwii-sh/ewwii.git ewwii
@@ -44,7 +47,7 @@ jobs:
           cp -r ./ewwii/tools/generate-rhai-docs/* ./docs/modules/
 
       - name: Build site
-        run: npm run build
+        run: pnpm run build
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
