feat(ci): fixed  ERR_PNPM_CI_NOT_IMPLEMENTED  The ci command is not implemented yet issue and added cargo cache

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,18 @@ jobs:
           profile: minimal
           override: true
 
+      - name: Cache Cargo registry and git
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
       - name: Install dependencies
-        run: pnpm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Clone Ewwii repo
         run: git clone https://github.com/Ewwii-sh/ewwii.git ewwii
