--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@docusaurus/module-type-aliases": "3.8.1",
     "@docusaurus/tsconfig": "3.8.1",
     "@docusaurus/types": "3.8.1",
-    "typescript": "~5.6.2"
+    "@types/mdast": "^4.0.4",
+    "typescript": "~5.6.2",
+    "unified": "^11.0.5"
   },
   "browserslist": {
     "production": [
