--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,45 +14,21 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Cache apt-get package lists
+      - name: Cache system dependencies
         uses: actions/cache@v3
         with:
-          path: |
-            /var/cache/apt/archives
-            /var/lib/apt/lists
-          key: ${{ runner.os }}-apt-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-apt-
+          path: /tmp/apt-cache
+          key: ${{ runner.os }}-debs-v1
 
       - name: Install APT dependencies
         run: |
+          mkdir -p /tmp/apt-cache
           sudo apt-get update
-          sudo apt-get install -y \
-            pkg-config \
-            libcairo2-dev \
-            libglib2.0-dev \
-            libgirepository1.0-dev \
-            libpango1.0-dev \
-            libatk1.0-dev \
-            libgtk-3-dev
-
-      - name: Cache Rust toolchain
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo
-          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-rust-
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20"
-
-      - name: Install pnpm
-        run: npm install -g pnpm
+          sudo apt-get -o dir::cache::archives="/tmp/apt-cache" install -y \
+            pkg-config libcairo2-dev libglib2.0-dev libgirepository1.0-dev \
+            libpango1.0-dev libatk1.0-dev libgtk-3-dev
 
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
@@ -61,29 +37,31 @@ jobs:
           profile: minimal
           override: true
 
-      - name: Cache Cargo registry and git
+      - name: Cache Rust deps
         uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
+            target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: pnpm
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install Node dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Cache pnpm store
-        uses: actions/cache@v3
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-
-
       - name: Clone Ewwii repo
-        run: git clone https://github.com/Ewwii-sh/ewwii.git ewwii
+        run: git clone --depth 1 https://github.com/Ewwii-sh/ewwii.git ewwii
 
       - name: Generate Rhai docs
         run: cargo run --release -p generate-rhai-docs
