--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -24,4 +24,4 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ghcr.io/${{ github.repository }}/docusaurus-builder:latest
+          tags: ghcr.io/ewwii-sh/docs/docusaurus-builder:latest
