--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -24,5 +24,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
+          file: .github/docker/Dockerfile
           push: true
           tags: ghcr.io/ewwii-sh/docs/docusaurus-builder:latest
