--- a/.github/docker/Dockerfile
+++ b/.github/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:22.04
 RUN apt-get update && apt-get install -y \
       pkg-config libcairo2-dev libglib2.0-dev libgirepository1.0-dev \
       libpango1.0-dev libatk1.0-dev libgtk-3-dev \
-      git curl gnupg lsb-release ca-certificates \
+      jq git curl gnupg lsb-release ca-certificates \
  && rm -rf /var/lib/apt/lists/*
 
 RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
