feat: removed the installation section in introdution.md

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,7 +57,7 @@ jobs:
       - name: Generate Rhai docs for all frozen versions
         run: |
           cd ewwii
-          versions=$(jq -r '.[]' versions.json)
+          versions=$(jq -r '.[]' ../versions.json)
           git -C ewwii fetch --tags --force
           for v in $versions; do
             echo "Processing version $v"
