feat(ci): added rust toolchain setup step in deploy workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -48,6 +48,9 @@ jobs:
             git clone https://github.com/Ewwii-sh/ewwii.git ewwii
           fi
 
+      - name: Setup Rust toolchain
+        run: rustup default stable
+
       - name: Generate Rhai docs for next
         run: |
           mkdir -p ./tools/generate-rhai-docs/auto_gen/
