--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,8 +28,7 @@ jobs:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
-            **/target-*
-            **/Cargo.lock
+            ewwii/target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
