feat(ci): made the rust install profile default

--- a/.github/docker/Dockerfile
+++ b/.github/docker/Dockerfile
@@ -12,7 +12,7 @@ RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
  && npm install -g pnpm \
  && rm -rf /var/lib/apt/lists/*
 
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile default
 ENV PATH="/root/.cargo/bin:$PATH"
 
 RUN rustup install 1.89.0
