feat(docker): made the dockerfile use rust:1.90.0-slim instead of ubuntu-full

--- a/.github/docker/Dockerfile
+++ b/.github/docker/Dockerfile
@@ -1,22 +1,22 @@
-FROM ubuntu:22.04
+FROM rust:1.90.0-slim
 
+# Install minimal system dependencies
 RUN apt-get update && apt-get install -y \
-      pkg-config libcairo2-dev libglib2.0-dev libgirepository1.0-dev \
-      libpango1.0-dev libatk1.0-dev libgtk-3-dev \
-      jq git curl gnupg lsb-release ca-certificates \
+      pkg-config git curl jq ca-certificates build-essential \
  && rm -rf /var/lib/apt/lists/*
 
+# Install Node 20 + pnpm
 RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
- && apt-get update \
  && apt-get install -y nodejs \
  && npm install -g pnpm \
  && rm -rf /var/lib/apt/lists/*
 
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile default
-ENV PATH="/root/.cargo/bin:$PATH"
+# Install 1.89.0 version
+RUN rustup install 1.89.0 \
+ && rustup component add rustfmt clippy rust-src --toolchain 1.89.0
 
-RUN rustup install 1.89.0
-RUN rustup install stable
-RUN rustup default stable
+# Install stable version
+RUN rustup default stable \
+ && rustup component add rustfmt clippy rust-src --toolchain stable
 
 WORKDIR /workspace
