--- a/.github/docker/Dockerfile
+++ b/.github/docker/Dockerfile
@@ -1,8 +1,10 @@
 FROM rust:1.90.0-slim
 
-# Install minimal system dependencies
+# Install necessary system dependencies
 RUN apt-get update && apt-get install -y \
-      pkg-config git curl jq ca-certificates build-essential \
+      pkg-config libcairo2-dev libglib2.0-dev libgirepository1.0-dev \
+      libpango1.0-dev libatk1.0-dev libgtk-3-dev \
+      jq git curl gnupg lsb-release ca-certificates \
  && rm -rf /var/lib/apt/lists/*
 
 # Install Node 20 + pnpm
